fixing borders on mobile

--- a/src/scss/partials/popupwrapper.scss
+++ b/src/scss/partials/popupwrapper.scss
@@ -108,6 +108,10 @@
       ::-webkit-scrollbar {
         width: 10px;
       }
+
+      &_header{
+        border-radius: 10px 10px 0 0;
+      }
         &_content{
             height: 300px;
             margin: 10px;
